--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "roboto-fontface": "0.8.0",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.3.0",
+    "scrollreveal": "^4.0.5",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
     "tslib": "^1.9.0",
@@ -78,7 +79,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.2",
-    "@angular/cli": "^8.0.2",
+    "@angular/cli": "^8.3.14",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "8.0.0",
     "@compodoc/compodoc": "1.0.1",
